[package]
name = "leptos-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
tower = "0.5"
tower-http = { version = "0.4", features = ["cors"] } # ⚠ cors feature aanzetten
hyper = "0.14"
